err/djangoueditor.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DjangoUeditor'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/_examples'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/_examples/server'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/anchor'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/attachment'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/attachment/fileTypeImages'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/attachment/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/background'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/background/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/charts'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/charts/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/emotion'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/emotion/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/gmap'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/help'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/image'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/image/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/insertframe'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/link'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/map'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/music'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/preview'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/scrawl'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/scrawl/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/searchreplace'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/snapscreen'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/spechars'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/table'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/template'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/template/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/video'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/video/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/webapp'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/dialogs/wordimage'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/lang'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/lang/en'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/lang/en/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/lang/zh-cn'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/lang/zh-cn/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/php'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/themes'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/themes/default'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/themes/default/css'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/themes/default/images'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/SyntaxHighlighter'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/codemirror'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/highcharts'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/highcharts/adapters'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/highcharts/modules'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/highcharts/themes'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/snapscreen'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/video-js'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/video-js/font'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/webuploader'...
Listing './lib/python3.5/site-packages/DjangoUeditor/static/ueditor/third-party/zeroclipboard'...
Listing './lib/python3.5/site-packages/DjangoUeditor/templates'...
Compiling './lib/python3.5/site-packages/DjangoUeditor/utils.py'...
***   File "./lib/python3.5/site-packages/DjangoUeditor/utils.py", line 5
    SIZE_UNIT={"Byte":1,"KB":1024,"MB":1048576,"GB":1073741824,"TB":1099511627776L}
                                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/DjangoUeditor/views.py'...
***   File "./lib/python3.5/site-packages/DjangoUeditor/views.py", line 26
    except Exception,E:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/DjangoUeditor-1.8.143.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
